--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "pretest": "eslint --ignore-path .eslintignore .",
     "test": "mocha test",
+    "testts": "mocha --compilers ts:ts-node/register  test/test.ts",
     "dist": "webpack"
   },
   "repository": {
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/ConsenSys/abi-decoder#readme",
   "dependencies": {
+    "ts-node": "^10.9.1",
     "web3-eth-abi": "^1.2.1",
     "web3-utils": "^1.2.1"
   },
@@ -34,12 +36,16 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/runtime": "^7.3.1",
+    "@types/bn.js": "^5.1.1",
+    "@types/chai": "^4.3.4",
+    "@types/jest": "^29.2.4",
     "babel-loader": "^8.0.5",
     "babel-plugin-add-module-exports": "^1.0.0",
     "chai": "^4.2.0",
     "eslint": "^6.0.1",
     "json-loader": "^0.5.7",
     "mocha": "^5.2.0",
+    "typescript": "^4.9.4",
     "webpack": "^4.29.1",
     "webpack-cli": "^3.2.3"
   }
