--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,21 @@
+
+
 {
-    "env": {
-        "es6": true,
-        "node": true,
-        "mocha": true
-    },
-    "extends": "eslint:recommended",
+    "root": true,
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 2015
+      "ecmaVersion": 12,
+      "sourceType": "module"
     },
+  
+    "plugins": ["simple-import-sort", "unused-imports"],
+    "extends": ["plugin:@typescript-eslint/recommended", "prettier", "plugin:prettier/recommended"],
     "rules": {
-        "indent": [
-            "error",
-            2
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "double"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
-    }
-}
+      "simple-import-sort/imports": "error",
+      "simple-import-sort/exports": "error",
+      "unused-imports/no-unused-imports": "error",
+      "@typescript-eslint/no-unused-vars": "error",
+      "@typescript-eslint/consistent-type-definitions": ["error", "interface"]
+    },
+    "overrides": []
+  }
