--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "pretest": "eslint --ignore-path .eslintignore .",
-    "test": "mocha test",
-    "testts": "mocha --compilers ts:ts-node/register  test/test.ts",
-    "dist": "webpack"
+    "test": "mocha --compilers ts:ts-node/register src/**/*.test.ts",
+    "build": "rm -rf dist/ & tsc --project tsconfig.build.json",
+    "lint": "eslint  --ext .js,.ts .",
+    "lint:fix": "eslint --fix --ext .js,.ts ."
   },
   "repository": {
     "type": "git",
@@ -39,14 +40,22 @@
     "@types/bn.js": "^5.1.1",
     "@types/chai": "^4.3.4",
     "@types/jest": "^29.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-add-module-exports": "^1.0.0",
     "chai": "^4.2.0",
-    "eslint": "^6.0.1",
+    "eslint": "^8.30.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "json-loader": "^0.5.7",
     "mocha": "^5.2.0",
+    "prettier": "^2.8.1",
+    "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
-    "webpack": "^4.29.1",
+    "webpack": "^5.75.0",
     "webpack-cli": "^3.2.3"
   }
 }
