--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "abi-decoder",
+  "name": "ts-abi-decoder",
   "version": "1.0.0",
-  "description": "Nodejs and Javascript library for decoding data params and events from ethereum transactions\"",
-  "main": "index.js",
+  "description": "Nodejs and TypeScript library for decoding data params and events from ethereum transactions\"",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "pretest": "eslint --ignore-path .eslintignore .",
     "test": "mocha --compilers ts:ts-node/register src/**/*.test.ts",
@@ -12,23 +13,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ConsenSys/abi-decoder.git"
+    "url": "git+https://github.com/LiorCohenn/ts-abi-decoder.git"
   },
   "keywords": [
     "ethereum",
     "abi",
     "decode"
   ],
-  "author": "denis@gnosis.pm",
+  "author": "Lior Cohen",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/ConsenSys/abi-decoder/issues"
+    "url": "https://github.com/LiorCohenn/ts-abi-decoder/issues"
   },
-  "homepage": "https://github.com/ConsenSys/abi-decoder#readme",
+  "homepage": "https://github.com/LiorCohenn/ts-abi-decoder#readme",
   "dependencies": {
-    "ts-node": "^10.9.1",
-    "web3-eth-abi": "^1.2.1",
-    "web3-utils": "^1.2.1"
+    "web3-eth-abi": "^1.8.1",
+    "web3-utils": "^1.8.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -54,6 +54,7 @@
     "mocha": "^5.2.0",
     "prettier": "^2.8.1",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^3.2.3"
